backported until 26.1.1 release