@@ -676,7 +676,7 @@ public class LocalBucket extends PaginatedComponent implements Bucket {
 
       LogManager.instance()
               .log(this, Level.FINE, "Creating record (%s records=%d threadId=%d)", selectedPage, availablePositionIndex,
-                      Thread.currentThread().threadId());
+                      Thread.currentThread().getId());
       final RID rid = new RID(database, file.getFileId(),
               ((long) selectedPage.getPageId().getPageNumber()) * maxRecordsInPage + availablePositionIndex);
 
@@ -706,7 +706,7 @@ public class LocalBucket extends PaginatedComponent implements Bucket {
 
       LogManager.instance()
               .log(this, Level.FINE, "Created record %s (%s records=%d threadId=%d)", rid, selectedPage, recordCountInPage,
-                      Thread.currentThread().threadId());
+                      Thread.currentThread().getId());
 
       if (!discardRecordAfter)
         ((RecordInternal) record).setBuffer(buffer.getNotReusable());
@@ -752,7 +752,7 @@ public class LocalBucket extends PaginatedComponent implements Bucket {
         throw new RecordNotFoundException("Record " + rid + " not found", rid);
 
 //      LogManager.instance()
-//          .log(this, Level.SEVERE, "UPDATE %s pageV=%d content %s (threadId=%d)", rid, page.getVersion(), record.toJSON(), Thread.currentThread().threadId());
+//          .log(this, Level.SEVERE, "UPDATE %s pageV=%d content %s (threadId=%d)", rid, page.getVersion(), record.toJSON(), Thread.currentThread().getId());
 
       boolean isPlaceHolder = false;
       if (recordSize[0] == RECORD_PLACEHOLDER_POINTER) {
@@ -852,7 +852,7 @@ public class LocalBucket extends PaginatedComponent implements Bucket {
 
           LogManager.instance()
                   .log(this, Level.FINE, "Updated record %s by allocating new space on the same page (%s threadId=%d)", null, rid, page,
-                          Thread.currentThread().threadId());
+                          Thread.currentThread().getId());
 
           updatePageStatistics(pageId, spaceAvailableInCurrentPage, -additionalSpaceNeeded);
 
@@ -875,14 +875,14 @@ public class LocalBucket extends PaginatedComponent implements Bucket {
 
             LogManager.instance()
                     .log(this, Level.FINE, "Updated record %s by allocating new space with a placeholder (%s threadId=%d)", null, rid,
-                            page, Thread.currentThread().threadId());
+                            page, Thread.currentThread().getId());
           } else {
             // SPLIT THE RECORD IN CHUNKS AS LINKED LIST AND STORE THE FIRST PART ON CURRENT PAGE ISSUE https://github.com/ArcadeData/arcadedb/issues/332
             writeMultiPageRecord(rid, buffer, page, recordPositionInPage, availableSpaceInCurrentPage);
 
             LogManager.instance().log(this, Level.FINE,
                     "Updated record %s by splitting it in multiple chunks to be saved in multiple pages (%s threadId=%d)", null, rid,
-                    page, Thread.currentThread().threadId());
+                    page, Thread.currentThread().getId());
           }
         }
       } else {
@@ -894,7 +894,7 @@ public class LocalBucket extends PaginatedComponent implements Bucket {
 
         LogManager.instance()
                 .log(this, Level.FINE, "Updated record %s with the same size or less as before (%s threadId=%d)", null, rid, page,
-                        Thread.currentThread().threadId());
+                        Thread.currentThread().getId());
       }
 
       if (!discardRecordAfter)
@@ -1024,7 +1024,7 @@ public class LocalBucket extends PaginatedComponent implements Bucket {
       }
 
       LogManager.instance()
-              .log(this, Level.FINE, "Deleted record %s (%s threadId=%d)", null, rid, page, Thread.currentThread().threadId());
+              .log(this, Level.FINE, "Deleted record %s (%s threadId=%d)", null, rid, page, Thread.currentThread().getId());
 
     } catch (final RecordNotFoundException e) {
       throw e;
@@ -1147,7 +1147,7 @@ public class LocalBucket extends PaginatedComponent implements Bucket {
       final int[] pointer = orderedRecordContentInPage.get(i);
       final int lastPointerEnd = lastPointer[0] + lastPointer[1];
       if (pointer[0] != lastPointerEnd) {
-        final int[] lastHole = holes.isEmpty() ? null : holes.getLast();
+        final int[] lastHole = holes.isEmpty() ? null : holes.get(holes.size() - 1);
         if (lastHole != null && lastHole[0] + lastHole[1] == pointer[0]) {
           // UPDATE PREVIOUS HOLE
           lastHole[1] += pointer[1];
@@ -1789,7 +1789,7 @@ public class LocalBucket extends PaginatedComponent implements Bucket {
 
             int freeSpaceInPage = getPageSize() - contentHeaderSize;
             if (!orderedRecordContentInPage.isEmpty()) {
-              final int[] lastRecord = orderedRecordContentInPage.getLast();
+              final int[] lastRecord = orderedRecordContentInPage.get(orderedRecordContentInPage.size() - 1);
               freeSpaceInPage = getPageSize() - (lastRecord[0] + lastRecord[1]);
             }
 
