@@ -722,13 +722,13 @@ public class MathExpression extends SimpleNode {
       return null;
 
     if (childExpressions.size() == 1)
-      return childExpressions.getFirst().execute(currentRecord, context);
+      return childExpressions.get(0).execute(currentRecord, context);
 
     if (childExpressions.size() == 2) {
       // Extract scalar values from ResultSets for arithmetic operations (issue #1723)
-      final Object leftValue = extractScalarFromResultSet(childExpressions.getFirst().execute(currentRecord, context));
+      final Object leftValue = extractScalarFromResultSet(childExpressions.get(0).execute(currentRecord, context));
       final Object rightValue = extractScalarFromResultSet(childExpressions.get(1).execute(currentRecord, context));
-      return operators.getFirst().apply(leftValue, rightValue);
+      return operators.get(0).apply(leftValue, rightValue);
     }
 
     return calculateWithOpPriority(currentRecord, context);
@@ -739,13 +739,13 @@ public class MathExpression extends SimpleNode {
       return null;
 
     if (childExpressions.size() == 1)
-      return childExpressions.getFirst().execute(currentRecord, context);
+      return childExpressions.get(0).execute(currentRecord, context);
 
     if (childExpressions.size() == 2) {
       // Extract scalar values from ResultSets for arithmetic operations (issue #1723)
-      final Object leftValue = extractScalarFromResultSet(childExpressions.getFirst().execute(currentRecord, context));
+      final Object leftValue = extractScalarFromResultSet(childExpressions.get(0).execute(currentRecord, context));
       final Object rightValue = extractScalarFromResultSet(childExpressions.get(1).execute(currentRecord, context));
-      return operators.getFirst().apply(leftValue, rightValue);
+      return operators.get(0).apply(leftValue, rightValue);
     }
 
     return calculateWithOpPriority(currentRecord, context);
@@ -755,7 +755,7 @@ public class MathExpression extends SimpleNode {
     final Deque valuesStack = new ArrayDeque<>();
     final Deque<Operator> operatorsStack = new ArrayDeque<Operator>();
 
-    final MathExpression nextExpression = childExpressions.getFirst();
+    final MathExpression nextExpression = childExpressions.get(0);
     // Extract scalar from ResultSet for arithmetic operations (issue #1723)
     final Object val = extractScalarFromResultSet(nextExpression.execute(currentRecord, context));
     valuesStack.push(val == null ? NULL_VALUE : val);
@@ -785,7 +785,7 @@ public class MathExpression extends SimpleNode {
     final Deque valuesStack = new ArrayDeque<>();
     final Deque<Operator> operatorsStack = new ArrayDeque<Operator>();
 
-    final MathExpression nextExpression = childExpressions.getFirst();
+    final MathExpression nextExpression = childExpressions.get(0);
     // Extract scalar from ResultSet for arithmetic operations (issue #1723)
     final Object val = extractScalarFromResultSet(nextExpression.execute(currentRecord, context));
     valuesStack.push(val == null ? NULL_VALUE : val);
@@ -915,7 +915,7 @@ public class MathExpression extends SimpleNode {
     if (this.childExpressions.size() != 1) {
       return false;
     }
-    return this.childExpressions.getFirst().isIndexedFunctionCall(context);
+    return this.childExpressions.get(0).isIndexedFunctionCall(context);
   }
 
   public long estimateIndexedFunction(final FromClause target, final CommandContext context, final BinaryCompareOperator operator,
@@ -923,7 +923,7 @@ public class MathExpression extends SimpleNode {
     if (this.childExpressions.size() != 1) {
       return -1;
     }
-    return this.childExpressions.getFirst().estimateIndexedFunction(target, context, operator, right);
+    return this.childExpressions.get(0).estimateIndexedFunction(target, context, operator, right);
   }
 
   public Iterable<Record> executeIndexedFunction(final FromClause target, final CommandContext context,
@@ -932,7 +932,7 @@ public class MathExpression extends SimpleNode {
     if (this.childExpressions.size() != 1) {
       return null;
     }
-    return this.childExpressions.getFirst().executeIndexedFunction(target, context, operator, right);
+    return this.childExpressions.get(0).executeIndexedFunction(target, context, operator, right);
   }
 
   /**
@@ -950,7 +950,7 @@ public class MathExpression extends SimpleNode {
     if (this.childExpressions.size() != 1) {
       return false;
     }
-    return this.childExpressions.getFirst().canExecuteIndexedFunctionWithoutIndex(target, context, operator, right);
+    return this.childExpressions.get(0).canExecuteIndexedFunctionWithoutIndex(target, context, operator, right);
   }
 
   /**
@@ -967,7 +967,7 @@ public class MathExpression extends SimpleNode {
     if (this.childExpressions.size() != 1)
       return false;
 
-    return this.childExpressions.getFirst().allowsIndexedFunctionExecutionOnTarget(target, context, operator, right);
+    return this.childExpressions.get(0).allowsIndexedFunctionExecutionOnTarget(target, context, operator, right);
   }
 
   /**
@@ -986,12 +986,12 @@ public class MathExpression extends SimpleNode {
     if (this.childExpressions.size() != 1)
       return false;
 
-    return this.childExpressions.getFirst().executeIndexedFunctionAfterIndexSearch(target, context, operator, right);
+    return this.childExpressions.get(0).executeIndexedFunctionAfterIndexSearch(target, context, operator, right);
   }
 
   public boolean isBaseIdentifier() {
     if (this.childExpressions != null && childExpressions.size() == 1)
-      return childExpressions.getFirst().isBaseIdentifier();
+      return childExpressions.get(0).isBaseIdentifier();
 
     return false;
   }
@@ -1028,7 +1028,7 @@ public class MathExpression extends SimpleNode {
     if (this.childExpressions.size() != 1)
       return false;
 
-    return this.childExpressions.getFirst().isCount();
+    return this.childExpressions.get(0).isCount();
   }
 
   public SimpleNode splitForAggregation(final AggregateProjectionSplit aggregateProj, final CommandContext context) {
@@ -1103,7 +1103,7 @@ public class MathExpression extends SimpleNode {
     if (childExpressions.size() != 1)
       throw new CommandExecutionException("cannot apply REMOVE " + this);
 
-    childExpressions.getFirst().applyRemove(result, context);
+    childExpressions.get(0).applyRemove(result, context);
   }
 }
 /* JavaCC - OriginalChecksum=c255bea24e12493e1005ba2a4d1dbb9d (do not edit this line) */
