@@ -827,7 +827,7 @@ public class SelectStatementExecutionTest extends TestHelper {
     final String className = "testFetchFromBucketNumber";
     final Schema schema = database.getSchema();
     final DocumentType clazz = schema.createDocumentType(className);
-    final String targetClusterName = clazz.getBuckets(false).getFirst().getName();
+    final String targetClusterName = clazz.getBuckets(false).get(0).getName();
 
     database.begin();
     for (int i = 0; i < 10; i++) {
@@ -856,7 +856,7 @@ public class SelectStatementExecutionTest extends TestHelper {
     final Schema schema = database.getSchema();
     final DocumentType clazz = schema.createDocumentType(className);
 
-    final String targetBucketName = clazz.getBuckets(false).getFirst().getName();
+    final String targetBucketName = clazz.getBuckets(false).get(0).getName();
 
     database.begin();
     for (int i = 0; i < 10; i++) {
@@ -884,7 +884,7 @@ public class SelectStatementExecutionTest extends TestHelper {
     final Schema schema = database.getSchema();
     final DocumentType clazz = schema.createDocumentType(className);
 
-    final String targetClusterName = clazz.getBuckets(false).getFirst().getName();
+    final String targetClusterName = clazz.getBuckets(false).get(0).getName();
 
     database.begin();
     for (int i = 0; i < 10; i++) {
@@ -916,7 +916,7 @@ public class SelectStatementExecutionTest extends TestHelper {
       return;
     }
 
-    final String targetClusterName = clazz.getBuckets(false).getFirst().getName();
+    final String targetClusterName = clazz.getBuckets(false).get(0).getName();
     final String targetClusterName2 = clazz.getBuckets(false).get(1).getName();
 
     database.begin();
@@ -1025,7 +1025,7 @@ public class SelectStatementExecutionTest extends TestHelper {
 
   @Test
   void nonExistingRids() {
-    final int bucketId = database.getSchema().createDocumentType("testNonExistingRids").getBuckets(false).getFirst().getFileId();
+    final int bucketId = database.getSchema().createDocumentType("testNonExistingRids").getBuckets(false).get(0).getFileId();
     final ResultSet result = database.query("sql", "select from #" + bucketId + ":100000000");
     assertThat(result.hasNext()).isTrue();
 
@@ -1150,7 +1150,7 @@ public class SelectStatementExecutionTest extends TestHelper {
     final ExecutionPlan p2 = p.get();
     assertThat(p2 instanceof SelectExecutionPlan).isTrue();
     final SelectExecutionPlan plan = (SelectExecutionPlan) p2;
-    assertThat(plan.getSteps().getFirst().getClass()).isEqualTo(FetchFromIndexStep.class);
+    assertThat(plan.getSteps().get(0).getClass()).isEqualTo(FetchFromIndexStep.class);
     result.close();
   }
 
@@ -1183,7 +1183,7 @@ public class SelectStatementExecutionTest extends TestHelper {
     final ExecutionPlan p2 = p.get();
     assertThat(p2 instanceof SelectExecutionPlan).isTrue();
     final SelectExecutionPlan plan = (SelectExecutionPlan) p2;
-    assertThat(plan.getSteps().getFirst().getClass()).isEqualTo(FetchFromIndexStep.class);
+    assertThat(plan.getSteps().get(0).getClass()).isEqualTo(FetchFromIndexStep.class);
     result.close();
   }
 
@@ -1221,8 +1221,8 @@ public class SelectStatementExecutionTest extends TestHelper {
     final ExecutionPlan p2 = p.get();
     assertThat(p2 instanceof SelectExecutionPlan).isTrue();
     final SelectExecutionPlan plan = (SelectExecutionPlan) p2;
-    assertThat(plan.getSteps().getFirst().getClass()).isEqualTo(ParallelExecStep.class);
-    final ParallelExecStep parallel = (ParallelExecStep) plan.getSteps().getFirst();
+    assertThat(plan.getSteps().get(0).getClass()).isEqualTo(ParallelExecStep.class);
+    final ParallelExecStep parallel = (ParallelExecStep) plan.getSteps().get(0);
     assertThat(parallel.getSubExecutionPlans().size()).isEqualTo(2);
     result.close();
   }
@@ -1885,7 +1885,7 @@ public class SelectStatementExecutionTest extends TestHelper {
     final Object one = item.getProperty("one");
     assertThat(one instanceof List).isTrue();
     assertThat(((List) one).size()).isEqualTo(1);
-    final Object x = ((List) one).getFirst();
+    final Object x = ((List) one).get(0);
     assertThat(x instanceof Result).isTrue();
     assertThat((Object) ((Result) x).getProperty("a")).isEqualTo(1);
     result.close();
@@ -2149,7 +2149,7 @@ public class SelectStatementExecutionTest extends TestHelper {
 
     final ResultSet result = database.query("sql", "select from " + parent + " where name = 'name1'");
     final InternalExecutionPlan plan = (InternalExecutionPlan) result.getExecutionPlan().get();
-    assertThat(plan.getSteps().getFirst() instanceof ParallelExecStep).isTrue();
+    assertThat(plan.getSteps().get(0) instanceof ParallelExecStep).isTrue();
     for (int i = 0; i < 2; i++) {
       assertThat(result.hasNext()).isTrue();
       final Result item = result.next();
@@ -2194,7 +2194,7 @@ public class SelectStatementExecutionTest extends TestHelper {
 
     final ResultSet result = database.query("sql", "select from " + parent + " where name = 'name1' and surname = 'surname1'");
     final InternalExecutionPlan plan = (InternalExecutionPlan) result.getExecutionPlan().get();
-    assertThat(plan.getSteps().getFirst() instanceof ParallelExecStep).isTrue();
+    assertThat(plan.getSteps().get(0) instanceof ParallelExecStep).isTrue();
     for (int i = 0; i < 2; i++) {
       assertThat(result.hasNext()).isTrue();
       final Result item = result.next();
@@ -2238,7 +2238,7 @@ public class SelectStatementExecutionTest extends TestHelper {
 
     final ResultSet result = database.query("sql", "select from " + parent + " where name = 'name1' and surname = 'surname1'");
     final InternalExecutionPlan plan = (InternalExecutionPlan) result.getExecutionPlan().get();
-    assertThat(plan.getSteps().getFirst() instanceof FetchFromTypeExecutionStep).isTrue(); // no index used
+    assertThat(plan.getSteps().get(0) instanceof FetchFromTypeExecutionStep).isTrue(); // no index used
     for (int i = 0; i < 2; i++) {
       assertThat(result.hasNext()).isTrue();
       final Result item = result.next();
@@ -2288,7 +2288,7 @@ public class SelectStatementExecutionTest extends TestHelper {
     final ResultSet result = database.query("sql", "select from " + parent + " where name = 'name1' and surname = 'surname1'");
     final InternalExecutionPlan plan = (InternalExecutionPlan) result.getExecutionPlan().get();
     assertThat(
-        plan.getSteps().getFirst() instanceof FetchFromTypeExecutionStep).isTrue(); // no index, because the superclass is not empty
+        plan.getSteps().get(0) instanceof FetchFromTypeExecutionStep).isTrue(); // no index, because the superclass is not empty
     for (int i = 0; i < 2; i++) {
       assertThat(result.hasNext()).isTrue();
       final Result item = result.next();
@@ -2350,7 +2350,7 @@ public class SelectStatementExecutionTest extends TestHelper {
 
     final ResultSet result = database.query("sql", "select from " + parent + " where name = 'name1' and surname = 'surname1'");
     final InternalExecutionPlan plan = (InternalExecutionPlan) result.getExecutionPlan().get();
-    assertThat(plan.getSteps().getFirst() instanceof ParallelExecStep).isTrue();
+    assertThat(plan.getSteps().get(0) instanceof ParallelExecStep).isTrue();
     for (int i = 0; i < 3; i++) {
       assertThat(result.hasNext()).isTrue();
       final Result item = result.next();
@@ -2409,7 +2409,7 @@ public class SelectStatementExecutionTest extends TestHelper {
 
     final ResultSet result = database.query("sql", "select from " + parent + " where name = 'name1' and surname = 'surname1'");
     final InternalExecutionPlan plan = (InternalExecutionPlan) result.getExecutionPlan().get();
-    assertThat(plan.getSteps().getFirst() instanceof FetchFromTypeExecutionStep).isTrue();
+    assertThat(plan.getSteps().get(0) instanceof FetchFromTypeExecutionStep).isTrue();
     for (int i = 0; i < 3; i++) {
       assertThat(result.hasNext()).isTrue();
       final Result item = result.next();
@@ -3189,7 +3189,7 @@ public class SelectStatementExecutionTest extends TestHelper {
     Result item = result.next();
     List res = item.getProperty("filtered");
     assertThat(res.size()).isEqualTo(1);
-    assertThat(res.getFirst()).isEqualTo("foo");
+    assertThat(res.get(0)).isEqualTo("foo");
     result.close();
 
     result = database.query("sql", "select coll[<'ccc'] as filtered from " + className);
@@ -3211,7 +3211,7 @@ public class SelectStatementExecutionTest extends TestHelper {
     item = result.next();
     res = item.getProperty("filtered");
     assertThat(res.size()).isEqualTo(1);
-    assertThat(res.getFirst()).isEqualTo("bar");
+    assertThat(res.get(0)).isEqualTo("bar");
     result.close();
   }
 
