@@ -180,7 +180,7 @@ public class ArcadeGraph implements Graph, Closeable {
 
         final String[] hosts = new String[remoteAddresses.size()];
         for (int i = 0; i < remoteAddresses.size(); i++)
-          hosts[i] = HostUtil.parseHostAddress(remoteAddresses.getFirst(), "" + GREMLIN_SERVER_PORT)[0];
+          hosts[i] = HostUtil.parseHostAddress(remoteAddresses.get(0), "" + GREMLIN_SERVER_PORT)[0];
 
         final GraphBinaryMessageSerializerV1 serializer = new GraphBinaryMessageSerializerV1(
             new TypeSerializerRegistry.Builder().addRegistry(new ArcadeIoRegistry()));
@@ -295,19 +295,18 @@ public class ArcadeGraph implements Graph, Closeable {
 
     for (final Object o : vertexIds) {
       final RID rid;
-      switch (o) {
-        case RID iD -> rid = iD;
-        case Vertex vertex -> {
-          final Object objectId = vertex.id();
-          if (objectId != null)
-            rid = objectId instanceof RID rid1 ? rid1 : new RID(database, objectId.toString());
-          else
-            continue;
-        }
-        case String string -> rid = new RID(database, string);
-        case null, default -> {
+      if (o instanceof RID iD) {
+        rid = iD;
+      } else if (o instanceof Vertex vertex) {
+        final Object objectId = vertex.id();
+        if (objectId != null)
+          rid = objectId instanceof RID rid1 ? rid1 : new RID(database, objectId.toString());
+        else
           continue;
-        }
+      } else if (o instanceof String string) {
+        rid = new RID(database, string);
+      } else {
+        continue;
       }
 
       try {
@@ -361,19 +360,18 @@ public class ArcadeGraph implements Graph, Closeable {
 
     for (final Object o : edgeIds) {
       final RID rid;
-      switch (o) {
-        case RID iD -> rid = iD;
-        case Edge edge -> {
-          final Object objectId = edge.id();
-          if (objectId != null)
-            rid = objectId instanceof RID rid1 ? rid1 : new RID(database, objectId.toString());
-          else
-            continue;
-        }
-        case String string -> rid = new RID(database, string);
-        case null, default -> {
+      if (o instanceof RID iD) {
+        rid = iD;
+      } else if (o instanceof Edge edge) {
+        final Object objectId = edge.id();
+        if (objectId != null)
+          rid = objectId instanceof RID rid1 ? rid1 : new RID(database, objectId.toString());
+        else
           continue;
-        }
+      } else if (o instanceof String string) {
+        rid = new RID(database, string);
+      } else {
+        continue;
       }
 
       try {
